--- a/src/app/dados/estimativa/estimativa.component.html
+++ b/src/app/dados/estimativa/estimativa.component.html
@@ -3,13 +3,14 @@
     Target ou Épico
   </div>
   <div class="card-body">
+    <!--
     <p>
       Ocorre durante a execução do processo de
       <code>
         &#60;Portfólio de Projetos&#62;
       </code>
       e conforme a base histórica de projetos realizados.
-    </p>
+    </p>-->
     <div class="row">
       <div class="col-lg-6">
         <table class="table">
@@ -95,10 +96,10 @@
                 Pontos
               </th>
               <th>
-                Est. Esf. (h)
+                Esforço
               </th>
               <th>
-                Qtde SP
+                Sprints
               </th>
               <th>
                 Custo (R$)
@@ -170,6 +171,7 @@
     Estimativa Inicial
   </div>
   <div class="card-body">
+    <!--
     <p>
       Realizada durante a etapa de
       <code>
@@ -183,7 +185,7 @@
       <code>
         &#60;Ciclo de Desenvolvimento.&#62;
       </code>
-    </p>
+    </p>-->
     <div class="table-responsive">
       <table class="table mb-0">
         <thead>
@@ -195,7 +197,7 @@
               Time
             </th>
             <th>
-              Qtde MVP
+              MVPs
             </th>
             <th>
               Pontos
