--- a/src/app/dados/outros/outros.component.html
+++ b/src/app/dados/outros/outros.component.html
@@ -2,14 +2,14 @@
   <div class="card-header">
     Pesquisa de Efetividade
   </div>
-  <div class="card-body">
+  <div class="card-body"><!--
     <p>
       Periodicamente, realiza-se uma pesquisa de
       <code>
         Efetividade
       </code>
       com as pessoas interessadas.
-    </p>
+    </p>-->
     <div class="no-more-tables">
       <table class="table table-bordered table-striped mb-0">
         <thead>
@@ -152,13 +152,14 @@
     Avaliação de maturidade
   </div>
   <div class="card-body">
+    <!--
     <p>
       A avaliação de
       <code>
         Maturidade
       </code>
       cobre o domínio da infraestrutura necessária ao trabalho do time.
-    </p>
+    </p>-->
     <div class="table-responsive">
       <table class="table table-bordered table-striped mb-0">
         <thead>
@@ -287,13 +288,13 @@
     Termômetro
   </div>
   <div class="card-body">
-    <p>
+    <!--<p>
       A
       <code>
         Temperatura do Time
       </code>
       é um sentimento dos seus membros em relação a qualidade do ambiente de trabalho.
-    </p>
+    </p>-->
     <div class="card-body">
       <div class="no-more-tables">
         <table class="table table-bordered table-striped mb-0">
