--- a/src/app/dashboard-time/progresso/dashboard-time-progresso.component.html
+++ b/src/app/dashboard-time/progresso/dashboard-time-progresso.component.html
@@ -1,4 +1,4 @@
-Diagnóstico | <b>Progresso</b> | Desempenho<p>
+<a class="btn btn-outline-primary btn-link" href="dashboard-time" [routerLink]="['../diagnostico']">Diagnóstico</a> | <a class="btn btn-outline-primary btn-link" href="dashboard-time" [routerLink]="['../progresso']">Progresso</a> | <a class="btn btn-outline-primary btn-link" href="dashboard-time" [routerLink]="['../desempenho']">Desempenho</a><p>
 
 <div class="wrapper">
   <div class="row">
@@ -19,12 +19,12 @@ Diagnóstico | <b>Progresso</b> | Desempenho<p>
                   <div class="avatar-status bg-red">
                     <img src="assets/images/avatar.jpg" alt="" width="100" height="100" class="rounded-circle">
                   </div>
-                  <div class="mt-1">560/ 2000 PF</div>
+                  <div class="mt-1">28% REALIZADO</div>
                 </div>
                 <div class="m-1">
                   <ngb-progressbar type="success" [value]="25"></ngb-progressbar>
                 </div>
-                <div class="text-center"><small>28% COMPLETO</small></div>
+                <div class="text-center"><small>560/ 2000 PF</small></div>
               </figure>
             </div>
           </div>
@@ -33,22 +33,17 @@ Diagnóstico | <b>Progresso</b> | Desempenho<p>
           <div class="row text-center">
             <div class="col">
               <h2 class="mt-0"><b>23,8K</b></h2>
-              <small>Orçamento</small>
+              <small>orçamento</small>
             </div>
             <div class="col">
               <h2 class="mt-0"><b>569</b></h2>
-              <small>Atualizações</small>
+              <small>atualizações</small>
             </div>
             <div class="col">
               <h2 class="mt-0"><b>67</b></h2>
-              <small>Envolvidos</small>
+              <small>envolvidos</small>
             </div>
           </div>
-        </div>
-        <div class="card-body">
-          <!--<p class="ff-headers text-uppercase mb-3"><strong>Sobre</strong></p>-->
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod semper.</p>
-
         </div>
       </div>
     </div>
