--- a/src/app/info/boletins/boletins.component.html
+++ b/src/app/info/boletins/boletins.component.html
@@ -4,8 +4,8 @@
     <div class="card">
       <div class="card-body">
         <h6 class="card-title text-uppercase">Desenvolvimento ágil e enxuto</h6>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">Conheça métodos que se destacam no desenvolvimento de software efetivo.</p>
+        <a href="#" class="btn btn-primary">Saiba mais</a>
       </div>
     </div>
   </div>
@@ -13,8 +13,8 @@
     <div class="card">
       <div class="card-body">
         <h6 class="card-title text-uppercase">Métricas de software</h6>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">Veja uma biblioteca abrangente sobre os principais padrões internacionais.</p>
+        <a href="#" class="btn btn-primary">Saiba mais</a>
       </div>
     </div>
   </div>
@@ -30,11 +30,11 @@
           Entenda o PDC: Plano de Desenvolvimento Coletivo
         </h5>
         <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+          Dúvidas ao avaliar o desempenho das pessoas em times ágeis? Pense no coletivo.
         </p>
         <p class="card-text">
           <small class="text-muted">
-            Last updated 3 mins ago
+            Última atualização: 3 min. atrás
           </small>
         </p>
       </div>
@@ -44,14 +44,14 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">
-          A vantagem de trabalhar com métricas objetivas
+          As vantagens da objetividade
         </h5>
         <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+          Descubra a razão pelo qual cada vez mais empresas têm aderido à abordagem de métricas objetivas como estratégia para análise de performance da TI.
         </p>
         <p class="card-text">
           <small class="text-muted">
-            Last updated 3 mins ago
+            Última atualização: 3 min. atrás
           </small>
         </p>
       </div>
@@ -64,34 +64,34 @@
 <div class="row">
   <div class="col-lg-4">
     <div class="card card-body">
-      <h6 class="card-title text-uppercase">Special title treatment</h6>
+      <h6 class="card-title text-uppercase">Constatando diagnóstico</h6>
       <p class="card-text">
-        With supporting text below as a natural lead-in to additional content.
+        Desvende o que seus números significam para o planejamento estratégico.
       </p>
       <a href="javascript:;" class="btn btn-primary">
-        Go somewhere
+        Saiba mais
       </a>
     </div>
   </div>
   <div class="col-lg-4">
     <div class="card card-body">
-      <h6 class="card-title text-uppercase">Special title treatment</h6>
+      <h6 class="card-title text-uppercase">Avaliando progresso</h6>
       <p class="card-text">
-        With supporting text below as a natural lead-in to additional content.
+        A versatilidade e as múltiplas visões num acompanhamento através da matemática.
       </p>
       <a href="javascript:;" class="btn btn-primary">
-        Go somewhere
+        Saiba mais
       </a>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card card-body text-right">
-      <h6 class="card-title text-uppercase">Special title treatment</h6>
+    <div class="card card-body">
+      <h6 class="card-title text-uppercase">Discutindo desempenho</h6>
       <p class="card-text">
-        With supporting text below as a natural lead-in to additional content.
+        O estabelecimento de planos de desenvolvimento, passível de benchmarking real.
       </p>
       <a href="javascript:;" class="btn btn-primary">
-        Go somewhere
+        Saiba mais
       </a>
     </div>
   </div>
@@ -102,15 +102,15 @@
   <div class="col-lg-4">
     <div class="card">
       <div class="card-header">
-        Featured
+        Destaque
       </div>
       <div class="card-body">
-        <h6 class="card-title text-uppercase">Special title treatment</h6>
+        <h6 class="card-title text-uppercase">Métricas x Especificação</h6>
         <p class="card-text">
           With supporting text below as a natural lead-in to additional content.
         </p>
         <a href="javascript:;" class="btn btn-primary">
-          Go somewhere
+          Saiba mais
         </a>
       </div>
     </div>
@@ -118,7 +118,7 @@
   <div class="col-lg-4">
     <div class="card">
       <div class="card-header">
-        Quote
+        Mindset
       </div>
       <div class="card-body">
         <blockquote class="card-blockquote">
@@ -126,9 +126,9 @@
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
           </p>
           <footer>
-            Someone famous in
+            Alguém conhecido por
             <cite title="Source Title">
-              Source Title
+              Governança Ágil
             </cite>
           </footer>
         </blockquote>
@@ -138,16 +138,16 @@
   <div class="col-lg-4">
     <div class="card">
       <div class="card-header">
-        Featured
+        Destaque
       </div>
       <div class="card-body">
-        <h6 class="card-title text-uppercase">Special title treatment</h6>
+        <h6 class="card-title text-uppercase">Governança Ágil</h6>
         <p class="card-text">
           With supporting text below as a natural lead-in to additional content.
         </p>
       </div>
       <div class="card-footer text-muted">
-        2 days ago
+        2 dias atrás
       </div>
     </div>
   </div>
@@ -160,14 +160,14 @@
       <img class="card-img img-fluid" src="assets/images/unsplash/3.jpg" alt="Card image"/>
       <div class="card-img-overlay">
         <h5 class="card-title">
-          Card title
+          Lean Startup
         </h5>
         <p class="card-text">
           This is a wider card with supporting text below as a natural lead-in to additional content.
         </p>
         <p class="card-text">
           <small>
-            Last updated 3 mins ago
+            Por Eric Ries
           </small>
         </p>
       </div>
@@ -178,14 +178,14 @@
       <img class="card-img img-fluid" src="assets/images/unsplash/4.jpg" alt="Card image"/>
       <div class="card-img-overlay">
         <h5 class="card-title">
-          Card title
+          Direto ao Ponto
         </h5>
         <p class="card-text">
           This is a wider card with supporting text below as a natural lead-in to additional content.
         </p>
         <p class="card-text">
           <small>
-            Last updated 3 mins ago
+            Por Paulo Caroli
           </small>
         </p>
       </div>
@@ -196,14 +196,14 @@
       <img class="card-img img-fluid" src="assets/images/unsplash/5.jpg" alt="Card image"/>
       <div class="card-img-overlay">
         <h5 class="card-title">
-          Card title
+          Agile & Scrum
         </h5>
         <p class="card-text">
           This is a wider card with supporting text below as a natural lead-in to additional content.
         </p>
         <p class="card-text">
           <small>
-            Last updated 3 mins ago
+            Por Martin Fowler
           </small>
         </p>
       </div>
@@ -214,14 +214,14 @@
       <img class="card-img img-fluid" src="assets/images/unsplash/6.jpg" alt="Card image"/>
       <div class="card-img-overlay">
         <h5 class="card-title">
-          Card title
+          Métricas
         </h5>
         <p class="card-text">
           This is a wider card with supporting text below as a natural lead-in to additional content.
         </p>
         <p class="card-text">
           <small>
-            Last updated 3 mins ago
+            Por Maurício Aguiar
           </small>
         </p>
       </div>
@@ -277,14 +277,14 @@
         <img class="card-img-top img-fluid" src="assets/images/unsplash/7.jpg" alt="Card image"/>
         <div class="card-body">
           <h5 class="card-title">
-            Card title
+            ISMA 2018, Roma (ITA)
           </h5>
           <p class="card-text">
-            This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+            O principal evento de métricas do mundo será realizado no mês de maio/2017, na belíssima cidade de roma. Fique ligado!
           </p>
           <p class="card-text">
             <small class="text-muted">
-              Last updated 3 mins ago
+              Começa em 12/05/2018, até 15/05/2018
             </small>
           </p>
         </div>
@@ -293,14 +293,14 @@
         <img class="card-img-top img-fluid" src="assets/images/unsplash/8.jpg" alt="Card image"/>
         <div class="card-body">
           <h5 class="card-title">
-            Card title
+            Agile nas Montanhas, Munique (ALE)
           </h5>
           <p class="card-text">
-            This card has supporting text below as a natural lead-in to additional content.
+            Abordando Agile de uma forma diferente, em meio à floresta negra alemã, este evento promete!
           </p>
           <p class="card-text">
             <small class="text-muted">
-              Last updated 3 mins ago
+              Começa em 10/06/2018
             </small>
           </p>
         </div>
@@ -309,14 +309,14 @@
         <img class="card-img-top img-fluid" src="assets/images/unsplash/9.jpg" alt="Card image"/>
         <div class="card-body">
           <h5 class="card-title">
-            Card title
+            Exercitando Startups, Porto Alegre (BRA)
           </h5>
           <p class="card-text">
-            This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+            Veja como Adams e sua equipe enfrentaram seus principais desafios práticos ao iniciar sua startup na linha do sucesso.
           </p>
           <p class="card-text">
             <small class="text-muted">
-              Last updated 3 mins ago
+              Ocorrerá em 15/07/2018
             </small>
           </p>
         </div>
@@ -334,14 +334,14 @@
           <img class="card-img-top img-fluid" src="assets/images/unsplash/10.jpg" alt="Card image"/>
           <div class="card-body">
             <h5 class="card-title">
-              Card title
+              Google+
             </h5>
             <p class="card-text">
-              This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+              Organizanda pela própria Google, esta Meetup é o evento mais esperado do ano na área de tecnologia na região de Porto Alegre (BRA).
             </p>
             <p class="card-text">
               <small class="text-muted">
-                Last updated 3 mins ago
+                Ocorrerá em 25/12/2017
               </small>
             </p>
           </div>
@@ -350,14 +350,14 @@
           <img class="card-img-top img-fluid" src="assets/images/unsplash/11.jpg" alt="Card image"/>
           <div class="card-body">
             <h5 class="card-title">
-              Card title
+              Facebook Today and Tomorrow
             </h5>
             <p class="card-text">
-              This card has supporting text below as a natural lead-in to additional content.
+              Em Porto Alegre (BRA), um encontro que discutirá tendências e oportunidades em torno da rede social do Facebook.
             </p>
             <p class="card-text">
               <small class="text-muted">
-                Last updated 3 mins ago
+                Ocorrerá em 10/01/2018
               </small>
             </p>
           </div>
@@ -366,14 +366,14 @@
           <img class="card-img-top img-fluid" src="assets/images/unsplash/12.jpg" alt="Card image"/>
           <div class="card-body">
             <h5 class="card-title">
-              Card title
+              AWS Reinvent
             </h5>
             <p class="card-text">
-              This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+              Principal Meetup, este evento agora será realizado em Porto Alegre (BRA), na FIERGS. Ele promete movimentar os fãs da AWS.
             </p>
             <p class="card-text">
               <small class="text-muted">
-                Last updated 3 mins ago
+                Ocorrerá em 12/01/2018
               </small>
             </p>
           </div>
@@ -382,14 +382,14 @@
           <img class="card-img-top img-fluid" src="assets/images/unsplash/13.jpg" alt="Card image"/>
           <div class="card-body">
             <h5 class="card-title">
-              Card title
+              Code + Code
             </h5>
             <p class="card-text">
-              This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+              Vamos discutir em Caxias do Sul, no dia 15/01, as principais tendências em relação à código reusável em grandes corporações. Não perca!
             </p>
             <p class="card-text">
               <small class="text-muted">
-                Last updated 3 mins ago
+                Ocorrerá em 15/01/2018
               </small>
             </p>
           </div>
