--- a/src/app/authentication/forgot/forgot.component.html
+++ b/src/app/authentication/forgot/forgot.component.html
@@ -4,16 +4,17 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="mb-3">
         <img src="assets/images/logo.png" class="avatar-xs mb-1" alt="">
-        <p class="ff-headers text-uppercase">Recover your password</p>
+        <p class="ff-headers text-uppercase">Recupere sua senha</p>
       </div>
       <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['uname'].hasError('required') && form.controls['uname'].touched}">
         <label for="username" class="form-control-label">
-          Enter your username
+          Informe seu nome
         </label>
         <input type="text" class="form-control" placeholder="Username" [formControl]="form.controls['uname']" [ngClass]="{'form-control-danger': form.controls['uname'].hasError('required') && form.controls['uname'].touched}"/>
         <div class="form-control-feedback" *ngIf="form.controls['uname'].hasError('required') && form.controls['uname'].touched">Username is required.</div>
       </fieldset>
-      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Reset password</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Reiniciar senha</button>
+      <a class="btn btn-outline-primary btn-link" [routerLink]="['/signin']">Voltar</a>
     </form>
   </div>
 </div>
