--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -3,32 +3,32 @@
   <div class="card card-body mb-0 rounded-0 p-5 col-sm-12 col-md-6 col-lg-4">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="mb-3">
-        <img src="assets/images/logo.png" class="avatar-xs mb-1" alt="">
-        <p class="ff-headers text-uppercase">Sign in to your account</p>
+        <img src="assets/images/caixa-trasnsp.png" class="avatar-xs mb-1" alt="">
+        <p class="ff-headers text-uppercase">POR FAVOR, IDENTIFIQUE-SE</p>
       </div>
       <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['uname'].hasError('required') && form.controls['uname'].touched}">
         <label for="username" class="form-control-label">
-          Enter your username
+          Informe o nome do seu usuário:
         </label>
         <input type="text" class="form-control" placeholder="username" [formControl]="form.controls['uname']" [ngClass]="{'form-control-danger': form.controls['uname'].hasError('required') && form.controls['uname'].touched}"/>
         <div class="form-control-feedback" *ngIf="form.controls['uname'].hasError('required') && form.controls['uname'].touched">Username is required.</div>
       </fieldset>
       <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['password'].hasError('required') && form.controls['password'].touched}">
         <label for="password" class="form-control-label">
-          Enter your password
+          Informe a sua senha:
         </label>
         <input type="password" class="form-control" placeholder="********" [formControl]="form.controls['password']" [ngClass]="{'form-control-danger': form.controls['password'].hasError('required') && form.controls['password'].touched}"/>
         <div class="form-control-feedback" *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched">Password is required.</div>
-        <a [routerLink]="['/authentication/forgot']" class="form-text"><small>Recover password</small></a>
+        <a [routerLink]="['/forgot']" class="form-text"><small>Recuperar senha</small></a>
       </fieldset>
       <label class="custom-control custom-checkbox mb-3">
         <input type="checkbox" class="custom-control-input">
         <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Stay logged in</span>
+        <span class="custom-control-description">manter-me logado</span>
       </label>
       <div class="block"></div>
-      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Login</button>
-      <a class="btn btn-outline-primary btn-link" [routerLink]="['/authentication/signup']">Create an account!</a>
+      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Entrar</button>
+      <a class="btn btn-outline-primary btn-link" [routerLink]="['/signup']">Experimentar grátis</a>
     </form>
   </div>
 </div>
