--- a/src/app/components/rating/rating.component.html
+++ b/src/app/components/rating/rating.component.html
@@ -1,11 +1,9 @@
 <div class="row">
-  <div class="col-lg-6">   
+  <div class="col-lg-6">
+
     <div class="card">
       <div class="card-header">Basic demo</div>
-      <div class="card-body">
-        <ngb-rating [(rate)]="currentRate"></ngb-rating>
-        <pre>Rate: <b>{{currentRate}}</b></pre>
-      </div>
+        <ngb-rating ([rate])="currentRate"></ngb-rating>
     </div>
 
     <div class="card">
