--- a/src/app/layouts/admin/admin-layout.component.html
+++ b/src/app/layouts/admin/admin-layout.component.html
@@ -79,6 +79,9 @@
       <span class="mr-auto"></span>
       <ul class="navbar-nav">
         <li class="nav-item" ngbDropdown placement="bottom-right">
+          <button class="btn btn-secondary" (click)="open(content)">Sicredi - CIO - Todos os times</button>
+        </li>
+        <li class="nav-item" ngbDropdown placement="bottom-right">
           <a href="javascript:;" class="nav-link" ngbDropdownToggle>
             <img src="assets/images/avatar1.jpg" class="navbar-avatar rounded-circle" alt="user" title="user">
           </a>
@@ -134,7 +137,31 @@
             <i class="fi flaticon-fullscreen"></i>
           </a>
         </li>
-
+        <!--
+        <li class="nav-item" ngbDropdown placement="bottom-right">
+          <div class="d-flex align-items-center">
+            <select class="custom-select" [(ngModel)]="currentLang" #langSelect="ngModel" (ngModelChange)="translate.use(currentLang)" placeholder="Select language" style="min-width: 50%;">
+              <option *ngFor="let lang of translate.getLangs()" [value]="lang">{{ lang }}</option>
+            </select>
+          </div>
+        </li>
+      -->
+<!--
+        <li class="nav-item" ngbDropdown placement="bottom-right">
+          <div class="custom-controls-stacked mb-2">
+            <label class="custom-control custom-checkbox">
+              <input class="custom-control-input" name="radio-stacked" type="radio" value="light" [(ngModel)]="theme">
+              <span class="custom-control-indicator"></span>
+              <span class="custom-control-description">Branco</span>
+            </label>
+            <label class="custom-control custom-checkbox">
+              <input class="custom-control-input" name="radio-stacked" type="radio" value="dark" [(ngModel)]="theme">
+              <span class="custom-control-indicator"></span>
+              <span class="custom-control-description">Escuro</span>
+            </label>
+          </div>
+        </li>
+-->
         <li class="nav-item">
           <span class="nav-divider"></span>
         </li>
@@ -146,6 +173,22 @@
 
       </ul>
     </nav>
+
+    <ng-template ngbModalContainer></ng-template>
+    <ng-template #content let-c="close" let-d="dismiss">
+      <div class="modal-header">
+        <h6 class="modal-title text-uppercase">Selecione o contexto</h6>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Sicredi, CIO, Todos os Times&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="c('Close click')">Selecionar</button>
+      </div>
+    </ng-template>
 
     <div class="main-content">
       <router-outlet></router-outlet>
@@ -171,10 +214,10 @@
 <ng-template #search let-c="close" let-d="dismiss">
   <form class="search__form" action="">
     <input class="search-input" name="search" type="search" placeholder="Search..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus="true" />
-    <p class="text-muted"><small><strong>Hit enter to search or ESC to close</strong></small></p>
+    <p class="text-muted"><small><strong>Pressione ENTER para continuar ou ESC para fechar</strong></small></p>
   </form>
   <div class="search-suggestions">
-    <h6 class="text-uppercase"><strong>Suggestions?</strong></h6>
+    <h6 class="text-uppercase"><strong>Sugestões?</strong></h6>
     <p class="text-primary">#medical #analytics #fitness #transport #ui #dashboard #admin #bootstrap #angular #typescript</p>
   </div>
   <button type="button" class="search-close" aria-label="Close search form" (click)="d('Cross click')">
